# leetcode

./: .gitignore  README.md  notes.ipynb  pyproject.toml
array/: 1089_Duplicate_Zeros.ipynb  118_Pascals_Triangle.ipynb  11_Container_With_Most_Water.ipynb  1207_Unique_Number_of_Occurrences.ipynb  1295_Find_Numbers_with_Even_Number_of_Digits.ipynb  1346_Check_If_N_and_Its_Double_Exist.ipynb  1470_Shuffle_the_Array.ipynb  1480_Running_Sum_of_1d_Array.ipynb  1672_Richest_Customer_Wealth.ipynb  169_Majority_Element.ipynb  1732_Find_the_Highest_Altitude.ipynb  1822_Sign_of_the_Product_of_an_Array.ipynb  1_Two_Sum.ipynb  219_Contains_Duplicates_II.ipynb  220_Contains_Duplicates_III_Hard.ipynb  2215_Find_the_Difference_of_Two_Arrays.ipynb  2469_Convert_the_Temperature.ipynb  2716_Minimize_String_Length.ipynb  27_Remove_Element.ipynb  283_Move_Zeroes.ipynb  334_Increasing_Triplet_Subsequence.ipynb  349_Intersection_of_Two_Arrays.ipynb  35_Search_Insert_Position.ipynb  374_Guess_Number_Higher_or_Lower.ipynb  443_String_Compression.ipynb  485_Max_Consecutive_Ones.ipynb  6416_Find_the_Distinct_Difference_Array.ipynb  6417_Frequency_Tracker.ipynb  6418_Number_of_Adjacent_Elements_With_the_Same_Color.ipynb  643_Maximum_Average_Subarray_I.ipynb  6461_Check_if_The_Number_is_Fascinating.ipynb  80_Remove_Duplicates_from_Sorted_Array_II.ipynb  941_Valid_Mountain_Array.ipynb  NOTES.md  ThreeSum  ThreeSumClosest.py  removeDuplicates
bitwise_operation/: 1342_Number_of_Steps_to_Reduce_a_Number_to_Zero.ipynb  136_只出现一次的数字  136_只出现一次的数字.ipynb  137_只出现一次的数字II.ipynb  231_2的幂.ipynb  78_子集.ipynb  (+1 more)
(+136 files in other folders)
