[tool.poetry]
name = "leetcode"
version = "0.1.0"
description = ""
authors = ["joyenjoye <li.zhuo.2015@pbs.smu.edu.sg>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
psycopg2-binary = "^2.9.9"
ipykernel = "^6.29.4"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
